--- a/OnlineAddressBookWinUI/User/LoginPage.xaml
+++ b/OnlineAddressBookWinUI/User/LoginPage.xaml
@@ -11,9 +11,10 @@
 
     <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Center">
         <TextBlock Text="Welcome to Online Address Book" Margin="0,80" FontSize="30" Foreground="#763838" />
-        <Border BorderBrush="Gray" Height="400" Width="400" Background="#E7E5E5" CornerRadius="20">
+        <Border BorderBrush="Gray" Height="420" Width="400" Background="#E7E5E5" CornerRadius="20">
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -35,7 +36,7 @@
                     <PasswordBox x:Name="passwordInput" Width="300" Margin="5"/>
                 </StackPanel>
 
-                <Button HorizontalAlignment="Center" x:Name="submitBtn" Content="Submit" Grid.Row="3" Margin="0,15" Background="#1B9331" Foreground="White" Width="100"/>
+                <Button HorizontalAlignment="Center" x:Name="submitBtn" Content="Submit" Grid.Row="3" Margin="0,15" Background="#1B9331" Foreground="White" Width="100" Click="Login"/>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="4" Margin="0,10">
                     <TextBlock>
@@ -44,6 +45,8 @@
                 <Span> to continue</Span>
                     </TextBlock>
                 </StackPanel>
+
+                <TextBlock x:Name="alert" Foreground="#db0202" HorizontalAlignment="Center" Grid.Row="5" Margin="0,5" TextWrapping="Wrap"></TextBlock>
             </Grid>
         </Border>
     </StackPanel>
