Implementation of edit the contact

--- a/OnlineAddressBookWinUI/Contact/Display.xaml
+++ b/OnlineAddressBookWinUI/Contact/Display.xaml
@@ -15,9 +15,13 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
+        
+        <!--Text Contacts-->
         <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Row="0">
             <TextBlock Text="Contacts" Margin="0,40" FontSize="30" />
         </StackPanel>
+        
+        <!--To show the top buttons-->
         <StackPanel Grid.Row="1" Orientation="Horizontal">
             <Button Content="Logout" CornerRadius="0" Background="#db0202" Foreground="White" BorderThickness="0"  Height="35" Width="100" Click="Logout" x:Name="logoutBtn" Margin="30,0"></Button>
             <TextBox Width="700" Background="#F1EEEE" BorderThickness="1" BorderBrush="DarkGray" Margin="30,0" CornerRadius="0" PlaceholderText="Search Contacts" PlaceholderForeground="#888585" FontSize="15" Height="35"></TextBox>
@@ -26,8 +30,12 @@
             </ComboBox>
             <Button Content="New" CornerRadius="0" Background="#35772C" Foreground="White" BorderThickness="0"  Height="35" Width="100" Click="AddNewContact" x:Name="newBtn"></Button>
         </StackPanel>
+        
+        <!--scroll view for contacts-->
         <ScrollView Height="600" Grid.Row="2" Margin="70,50">
             <StackPanel>
+                
+                <!--Listview to display contacts-->
                 <ListView x:Name="contactList">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="local:Contact">
@@ -44,7 +52,7 @@
                                 <TextBlock Text="{x:Bind PhoneNo}" Grid.Column="1" FontSize="15" Margin="3" />
                                 <TextBlock Text="{x:Bind Address}" Grid.Column="2" FontSize="15" Margin="3" />
                                 <TextBlock Text="{x:Bind ContactGroup}" Grid.Column="3" FontSize="15" Margin="3" />
-                                <Button Grid.Column="4" Content="Edit" Background="#1c5be6" Foreground="White" Width="70" />
+                                <Button Grid.Column="4" Content="Edit" Background="#1c5be6" Foreground="White" Width="70" Click="EditContactClick" Tag="{x:Bind}" />
                                 <Button Grid.Column="5" Content="Delete" Background="#db0202" Foreground="White" />
                             </Grid>
                         </DataTemplate>
